2006-11-15  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/vte.c: Don't unload the VTE module on exit to avoid crashes on
              some systems.
 * src/main.c: Fixed small memory leak.


2006-11-15  Frank Lanitz  <frank@frank.uvena.de>

 * src/about.c, configure.in, THANKS, po/zh_TW.po:
   Added tranditional Chinese translation (Thanks to KoViCH
   <kovich.ian@gmail.com>).


2006-11-15  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/ui_utils.h, src/search.c, src/ui_utils.c:
   Add search history for Find in Files.
   Add ui_combo_box_add_to_history() and use to prevent blocks of
   duplicates (but not all duplicates) from search history combo boxes,
   and limit history to 30 entries.
 * src/build.c:
   Remove the stop button in build_exit_cb() when using Make commands.
   Fix set_stop_button() when using Make when the current file has no
   filetype.


2006-11-14  Enrico Tröger  <enrico.troeger@uvena.de>

 * scintilla/LexPascal.c: Tried to fix wrong styling at "end.".


2006-11-14  Frank Lanitz  <frank@frank.uvena.de>

 * po/zh_CN.po, src/about.c, configure.in, THANKS:
   Added simple Chinese (zh_CN) translation (Thanks to
   Dormouse Young <mouselinux@163.com>).


2006-11-14  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/templates.c, src/templates.h, src/callbacks.c, src/filetypes.c,
   src/filetypes.h, src/document.c, src/document.h:
   Add NULL-safe FILETYPE_ID macro to get filetype::id from pointer.
   Allow insertion of GPL notice and file header when the filetype is
   not set.
   Add commenting for PHP & HTML GPL notice and file header templates.
   Add make_comment_block() to templates.c.
   Move document_prepare_template(), filetypes_get_template() to
   templates.c.


2006-11-13  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/filetypes.c, src/filetypes.h, src/highlighting.c,
   src/highlighting.h, src/treeviews.c, scintilla/Makefile.am,
   scintilla/makefile.win32, scintilla/KeyWords.cxx,