@@ -2068,3 +2068,25 @@ on_menu_decrease_indent1_activate      (GtkMenuItem     *menuitem,
 }
 
 
+void
+on_window_drag_data_received
+                                       (GtkWidget *widget, GdkDragContext *drag_context,
+                                        gint x, gint y, GtkSelectionData *data, guint info,
+                                        guint time, gpointer user_data)
+{
+	gboolean success = FALSE;
+
+	if (data->length > 0 && data->format == 8)
+	{
+		if (drag_context->action == GDK_ACTION_ASK)
+		{
+			drag_context->action = GDK_ACTION_COPY;
+		}
+
+		document_open_file_list(data->data, data->length);
+
+		success = TRUE;
+	}
+	gtk_drag_finish(drag_context, success, FALSE, time);
+}
+
