@@ -130,6 +130,12 @@ void document_new_file(filetype *ft);
  */
 int document_open_file(gint, const gchar*, gint, gboolean, filetype*, const gchar*);
 
+
+/* Takes a new line separated list of filename URIs and opens each file.
+ * length is the length of the string or -1 if it should be detected */
+void document_open_file_list(const gchar *data, gsize length);
+
+
 int document_reload_file(gint idx, const gchar *forced_enc);
 
 
